RESOLVED FIXED87558
Some Content Security Policy console messages are missing line numbers in JSC
https://bugs.webkit.org/show_bug.cgi?id=87558
Summary Some Content Security Policy console messages are missing line numbers in JSC
Stephanie Lewis
Reported 2012-05-25 18:32:53 PDT
Regression from http://trac.webkit.org/projects/webkit/changeset/118585. Two test fail on Lion Debug and Release, WK1 and WK2. +http/tests/security/contentSecurityPolicy/inline-script-blocked-javascript-url.html expected actual diff pretty diff +http/tests/security/contentSecurityPolicy/javascript-url-blocked.html Example diff : --- /Volumes/Data/slave/mountainlion-production-wk2-tests/build/OpenSource/layout-test-results/http/tests/security/contentSecurityPolicy/inline-script-blocked-javascript-url-expected.txt +++ /Volumes/Data/slave/mountainlion-production-wk2-tests/build/OpenSource/layout-test-results/http/tests/security/contentSecurityPolicy/inline-script-blocked-javascript-url-actual.txt @@ -4,6 +4,6 @@ CONSOLE MESSAGE: Unrecognized Content-Security-Policy directive 'options'. -CONSOLE MESSAGE: line 1: Refused to execute JavaScript URL because it violates the following Content Security Policy directive: "script-src http://127.0.0.1:*". +CONSOLE MESSAGE: Refused to execute JavaScript URL because it violates the following Content Security Policy directive: "script-src http://127.0.0.1:*". This test passes if it doesn't alert fail.
Attachments
Patch (3.09 KB, patch)
2012-05-29 02:36 PDT, Chris Dumez
no flags
Patch (10.42 KB, patch)
2012-05-29 02:59 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2012-05-25 18:33:20 PDT
Stephanie Lewis
Comment 2 2012-05-25 19:00:09 PDT
Chris Dumez
Comment 3 2012-05-29 02:36:25 PDT
Created attachment 144493 [details] Patch The found the difference between JSC and V8 implementations of ScriptController::eventHandlerPosition(). Making JSC implementation behave as the V8 one fixes the line printing issue (because the function returns line 1 instead of line 0 in those cases). The patch does not seem to cause any regression for me.
Chris Dumez
Comment 4 2012-05-29 02:59:28 PDT
Created attachment 144498 [details] Patch Update patch to remove Qt-specific expectations as well.
Adam Barth
Comment 5 2012-05-29 16:26:55 PDT
Comment on attachment 144498 [details] Patch Thanks!
WebKit Review Bot
Comment 6 2012-05-29 17:25:30 PDT
Comment on attachment 144498 [details] Patch Clearing flags on attachment: 144498 Committed r118861: <http://trac.webkit.org/changeset/118861>
WebKit Review Bot
Comment 7 2012-05-29 17:25:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.