Source/WebCore/bindings/js/ScriptController.cpp
@@ -230,7 +230,7 @@ TextPosition ScriptController::eventHandlerPosition() const
     ScriptableDocumentParser* parser = m_frame->document()->scriptableDocumentParser();
     if (parser)
         return parser->textPosition();
-    return TextPosition::belowRangePosition();
+    return TextPosition::minimumPosition();
 }
 
 void ScriptController::disableEval()
